<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_card_view_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_card_view_style_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_dark_appbar"
            android:padding="@dimen/big_spacing"
            android:text="@string/album_card_view"
            android:textColor="@color/md_dark_primary_text"
            android:textSize="@dimen/sub_big_text"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--PREVIEW CARD STYLE-->
                <LinearLayout
                    android:id="@+id/ll_preview_album_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="80dp"
                    android:paddingTop="@dimen/medium_spacing"
                    android:paddingEnd="80dp" />

                <!--RADIO BUTTONS-->
                <RadioGroup
                    android:id="@+id/radio_group_card_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/medium_spacing">

                    <CheckBox
                        android:id="@+id/show_media_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_media_count"
                        android:textSize="@dimen/medium_text" />

                    <CheckBox
                        android:id="@+id/show_album_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_album_path"
                        android:textSize="@dimen/medium_text" />

                    <RadioButton
                        android:id="@+id/radio_card_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type_material"
                        android:textSize="@dimen/medium_text" />

                    <RadioButton
                        android:id="@+id/radio_card_flat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type_flat"
                        android:textSize="@dimen/medium_text" />

                    <RadioButton
                        android:id="@+id/radio_card_compact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type_compact"
                        android:textSize="@dimen/medium_text" />

                    <RadioButton
                        android:id="@+id/radio_card_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type_small"
                        android:textSize="@dimen/medium_text" />

                </RadioGroup>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>
