<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/advanced_sharing_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/advanced_sharing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_dark_appbar"
            android:padding="@dimen/big_spacing"
            android:text="@string/resize_before"
            android:textColor="@color/md_dark_primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radio_group_advanced_sharing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small_spacing">

                <RadioButton
                    android:id="@+id/radio_original"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_share_op1"
                    android:textSize="@dimen/medium_text" />

                <RadioButton
                    android:id="@+id/radio_25lighter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/advanced_share_op2"
                    android:textSize="@dimen/medium_text" />

                <RadioButton
                    android:id="@+id/radio_50lighter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/advanced_share_op3"
                    android:textSize="@dimen/medium_text" />

                <RadioButton
                    android:id="@+id/radio_70lighter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/advanced_share_op4"
                    android:textSize="@dimen/medium_text" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

</androidx.cardview.widget.CardView>
