<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/password_dialog_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_dark_appbar"
                    android:padding="@dimen/big_spacing"
                    android:text="@string/type_password"
                    android:textColor="@color/md_dark_primary_text"
                    android:textSize="@dimen/sub_big_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/rl_password_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/medium_spacing">

                    <EditText
                        android:id="@+id/password_edittxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sub_medium_spacing"
                        android:layout_marginEnd="@dimen/sub_medium_spacing"
                        android:hint="@string/password"
                        android:inputType="numberPassword"
                        android:maxLength="8"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/confirm_password_edittxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sub_medium_spacing"
                        android:layout_marginTop="@dimen/sub_medium_spacing"
                        android:layout_marginEnd="@dimen/sub_medium_spacing"
                        android:hint="@string/confirm_password"
                        android:inputType="numberPassword"
                        android:maxLength="8"
                        android:singleLine="true" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
