<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_chose_provider_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_dark_appbar"
            android:padding="@dimen/big_spacing"
            android:text="@string/chose_the_map_provider"
            android:textColor="@color/md_dark_primary_text"
            android:textSize="@dimen/sub_big_text"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radio_group_maps_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_spacing">

                <TextView
                    android:id="@+id/header_proprietary_maps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_google_static_maps_faster" />

                <RadioButton
                    android:id="@+id/radio_google_maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="maps.google.com"
                    android:textSize="@dimen/sub_medium_text" />

                <TextView
                    android:id="@+id/header_free_maps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_openstreetmap_slower" />

                <RadioButton
                    android:id="@+id/radio_mapb_streets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mapbox.com (streets)"
                    android:textSize="@dimen/sub_medium_text" />

                <RadioButton
                    android:id="@+id/radio_mapb_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mapbox.com (dark)"
                    android:textSize="@dimen/sub_medium_text" />

                <RadioButton
                    android:id="@+id/radio_mapb_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mapbox.com (light)"
                    android:textSize="@dimen/sub_medium_text" />

                <RadioButton
                    android:id="@+id/radio_osm_tyler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="herokuapp.com (watercolor)"
                    android:textSize="@dimen/sub_medium_text" />

            </RadioGroup>
        </ScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>
